Restore solr extension
Fixes #6806

--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -214,6 +214,7 @@
         <module>smallrye-reactive-messaging</module>
         <module>smb</module>
         <module>soap</module>
+        <module>solr</module>
         <module>splunk</module>
         <module>splunk-hec</module>
         <module>spring-rabbitmq</module>
