--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -236,6 +236,7 @@
         <module>smb</module>
         <module>snakeyaml</module>
         <module>soap</module>
+        <module>solr</module>
         <module>splunk</module>
         <module>splunk-hec</module>
         <module>spring-rabbitmq</module>
