--- a/poms/bom/pom.xml
+++ b/poms/bom/pom.xml
@@ -7701,6 +7701,13 @@
                                 <resolutionEntryPointInclude>com.sun.xml.fastinfoset:FastInfoset</resolutionEntryPointInclude>
                                 <resolutionEntryPointInclude>org.mapstruct:mapstruct-processor</resolutionEntryPointInclude>
                             </resolutionEntryPointIncludes>
+                            <resolutionExcludes>
+                                <!-- Exclude artifacts that we do not want in the flattened BOM -->
+                                <resolutionExclude>*:*:*:*:*:test</resolutionExclude>
+                                <resolutionExclude>*:*:*:test-jar:*:*</resolutionExclude>
+                                <resolutionExclude>*:*:*:*:tests:*</resolutionExclude>
+                                <resolutionExclude>*:*:*:*:testlib:*</resolutionExclude>
+                            </resolutionExcludes>
                             <bannedDependencyResources>
                                 <bannedDependencyResource>
                                     <location>classpath:enforcer-rules/quarkus-banned-dependencies.xml</location>
