--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -227,6 +227,7 @@
         <module>syslog</module>
         <module>tarfile</module>
         <module>telegram</module>
+        <module>telemetry-dev</module>
         <module>tika</module>
         <module>twilio</module>
         <module>twitter</module>
