--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -29,7 +29,7 @@ asciidoc:
 
     # Project versions
     camel-version: 4.10.0 # replace ${camel.version}
-    camel-docs-version: next
+    camel-docs-version: 4.10.x
     camel-quarkus-version: 3.19.0 # replace ${camel-quarkus.version}
     quarkus-version: 3.19.0 # replace ${quarkus.version}
     graalvm-version: 23.1.2 # replace ${graalvm.version}
