--- a/extensions-jvm/drill/runtime/pom.xml
+++ b/extensions-jvm/drill/runtime/pom.xml
@@ -47,6 +47,10 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-drill</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.drill.exec</groupId>
+            <artifactId>drill-jdbc-all</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
