Clean up usage of deprecated APIs

--- a/integration-test-groups/azure/azure-key-vault/pom.xml
+++ b/integration-test-groups/azure/azure-key-vault/pom.xml
@@ -60,6 +60,11 @@
             <artifactId>camel-quarkus-integration-tests-support-azure</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <profiles>
