Added azure-servicebus local testing

--- a/integration-test-groups/azure/azure-servicebus/src/main/resources/application.properties
+++ b/integration-test-groups/azure/azure-servicebus/src/main/resources/application.properties
@@ -21,3 +21,6 @@ azure.servicebus.topic.subscription.name=${AZURE_SERVICEBUS_TOPIC_SUBSCRIPTION_N
 
 # Avoid autowiring custom ServiceBus clients. They are set explicitly via endpoint options
 camel.component.azure-servicebus.autowired-enabled=false
+
+# Uncomment to reduce log noise from com.azure internals
+# quarkus.log.category."com.azure".level = OFF
