Use quarkus-rest-client instead of quarkus-rest in Jira extension
Fixes #7114

--- a/integration-tests/jira/pom.xml
+++ b/integration-tests/jira/pom.xml
@@ -41,7 +41,7 @@
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-rest-client-jackson</artifactId>
+            <artifactId>quarkus-rest-jsonb</artifactId>
         </dependency>
 
         <!-- test dependencies -->
