feat(extension): onboard opentelemetry2
Closes #7119

--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -181,6 +181,7 @@
         <module>openapi-java</module>
         <module>openstack</module>
         <module>opentelemetry</module>
+        <module>opentelemetry2</module>
         <module>optaplanner</module>
         <module>paho</module>
         <module>paho-mqtt5</module>
