--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -203,6 +203,7 @@
         <module>openapi-java</module>
         <module>openstack</module>
         <module>opentelemetry</module>
+        <module>opentelemetry2</module>
         <module>optaplanner</module>
         <module>paho</module>
         <module>paho-mqtt5</module>
