Configure extension capabilities for langchain4j-embeddings

--- a/extensions-jvm/langchain4j-embeddings/runtime/pom.xml
+++ b/extensions-jvm/langchain4j-embeddings/runtime/pom.xml
@@ -50,6 +50,11 @@
             <plugin>
                 <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-extension-maven-plugin</artifactId>
+                <configuration>
+                    <capabilities>
+                        <provides>org.apache.camel.langchain4j.embeddings</provides>
+                    </capabilities>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
