--- a/pom.xml
+++ b/pom.xml
@@ -178,6 +178,7 @@
 
         <!-- Test dependency versions (keep sorted alphabetically) -->
         <consul-client.version>${consul-client-version}</consul-client.version>
+        <dfdl-scala.version>2.12.20</dfdl-scala.version>
         <ftpserver.version>${ftpserver-version}</ftpserver.version>
         <hamcrest.version>3.0</hamcrest.version><!-- Awaitility and Wiremock -->
         <htmlunit-driver.version>4.13.0</htmlunit-driver.version>
@@ -185,6 +186,7 @@
         <sshd.version>2.12.1</sshd.version><!-- @sync io.quarkus:quarkus-bom:${quarkus.version} dep:org.apache.sshd:sshd-common -->
         <unboundid-ldapsdk.version>7.0.2</unboundid-ldapsdk.version>
         <wiremock.version>3.12.1</wiremock.version>
+        <xmlunit.version>2.10.0</xmlunit.version>
         <zt-exec.version>1.12</zt-exec.version>
 
         <!-- Tooling dependency versions (keep sorted alphabetically) -->
