--- a/poms/bom-test/pom.xml
+++ b/poms/bom-test/pom.xml
@@ -405,6 +405,11 @@
                 </exclusions>
             </dependency>
             <dependency>
+                <groupId>org.xmlunit</groupId>
+                <artifactId>xmlunit-core</artifactId>
+                <version>${xmlunit.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.zeroturnaround</groupId>
                 <artifactId>zt-exec</artifactId>
                 <version>${zt-exec.version}</version>
