Disable dev services for Kubernetes tests

--- a/integration-tests/kubernetes/src/main/resources/application.properties
+++ b/integration-tests/kubernetes/src/main/resources/application.properties
@@ -15,4 +15,6 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 
+quarkus.devservices.enabled=false
+
 camel.main.context-reload-enabled = true
