--- a/integration-tests/master-openshift/src/main/resources/application.properties
+++ b/integration-tests/master-openshift/src/main/resources/application.properties
@@ -15,6 +15,8 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 
+quarkus.devservices.enabled=false
+
 application.id = leader
 
 quarkus.camel.cluster.kubernetes.rebalancing = false
