Smooks: EDI isn't supported in Camel Quarkus Smooks Fixes #7219

--- a/poms/bom/pom.xml
+++ b/poms/bom/pom.xml
@@ -2579,6 +2579,10 @@
                         <groupId>xml-apis</groupId>
                         <artifactId>xml-apis</artifactId>
                     </exclusion>
+                    <exclusion>
+                        <groupId>org.smooks.cartridges.edi</groupId>
+                        <artifactId>smooks-edi-cartridge</artifactId>
+                    </exclusion>
                 </exclusions>
             </dependency>
             <dependency>
