--- a/poms/bom/pom.xml
+++ b/poms/bom/pom.xml
@@ -6721,6 +6721,16 @@
                 </exclusions>
             </dependency>
             <dependency>
+                <groupId>com.dylibso.chicory</groupId>
+                <artifactId>runtime</artifactId>
+                <version>${chicory.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.dylibso.chicory</groupId>
+                <artifactId>wasm</artifactId>
+                <version>${chicory.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>com.esotericsoftware.kryo</groupId>
                 <artifactId>kryo</artifactId>
                 <version>${kryo.version}</version>
