fixes #6771 DataFormat endpoints ignore camel.dataformat.* configuration properties

--- a/integration-tests/beanio/src/main/resources/application.properties
+++ b/integration-tests/beanio/src/main/resources/application.properties
@@ -15,3 +15,7 @@
 ## limitations under the License.
 ## ---------------------------------------------------------------------------
 quarkus.native.resources.includes=*mapping.xml
+
+camel.dataformat.beanio.stream-name = employee-stream
+camel.dataformat.beanio.mapping = employee-mapping.xml
+camel.dataformat.beanio.ignore-unexpected-records = false
